<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.12" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="horizontal" >
	
	            <TextView
	                android:id="@+id/textStatus"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/lblStatus" />
	
	            <TextView
	                android:id="@+id/textFName"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/lblFName"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	
	            <EditText
	                android:id="@+id/editFName"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:ems="10"
	                android:inputType="textPersonName" >
	
	            </EditText>
	
	            <TextView
	                android:id="@+id/textLName"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/lblLName"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	
	            <EditText
	                android:id="@+id/editLName"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:ems="10"
	                android:inputType="textPersonName" />
	
	            <TextView
	                android:id="@+id/textPhoneNo"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/lblPhoneNo"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	
	            <EditText
	                android:id="@+id/editPhoneNo"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:ems="10"
	                android:inputType="phone" />
	
	            <TextView
	                android:id="@+id/textEmail"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/lblEmail"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	
	            <EditText
	                android:id="@+id/editEmail"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:ems="10"
	                android:inputType="textEmailAddress" />
	
	            <TextView
	                android:id="@+id/textStatus2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="" />
	
	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center" >
	
	                <Button
	                    android:id="@+id/buttonSave"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:gravity="center_vertical|center_horizontal|fill|fill_vertical"
	                    android:text="@string/lblSave"
	                    />
	
	                <Button
	                    android:id="@+id/buttonClear"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/lblClear"
	                    />
	                
	                <Button
	                    android:id="@+id/buttonDelete"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/lblDelete"
	                    />
	
	            </LinearLayout>
	
	        </LinearLayout>

        </ScrollView>

    </FrameLayout>

</LinearLayout>